Updated README and other messages.